svc/api_gateway_service/k8s/api_gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    svc: api-gateway
    app: delinkcious
spec:
  replicas: 1
  selector:
    matchLabels:
      svc: api-gateway
      app: delinkcious
  template:
    metadata:
      labels:
        svc: api-gateway
        app: delinkcious
    spec:
      containers:
      - name: api-gateway
        image: g1g1/delinkcious-api-gateway:0.3
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  ports:
  - port:  5000
  selector:
    svc: api-gateway
    app: delinkcious
